fixed some visual bug on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -97,23 +97,25 @@
         display: grid;
     }
     main form.form-add div.form-add-group input{
-    width: -webkit-fill-available;
+        width: -webkit-fill-available;
     }
 
     main form.form-add button.btn-add{
         width: 100%;
-        margin: 0;
+        height: 3rem;
     }
     main form.form-add  button.btn-add:before{
+        font-size: 1rem;
         content: 'Add Task';
     }
 
     main table thead tr th {
-        padding: 20px;
+        font-size: 14px;
+        padding: 20px 0px 20px 15px;
     }
 
     main table tbody tr td {
-        padding: 15px 10px 15px 10px;
+        padding: 10px 0px 10px 15px;
     }
 
 }
@@ -130,8 +132,14 @@
 
     }
 
+    main table tbody td.actions-task {
+        text-align: center;
+        padding: 10px;
+    }
+
     main table tbody tr td.actions-task button.btn-edit{
         margin-bottom: .5em;
+        margin-left: 0;
     }
 
     main table tbody tr td.actions-task button.btn-delete{
@@ -141,5 +149,6 @@
 
     main table tbody tr td.actions-task button.btn-delete{
         margin-right: 0;
+        margin-left: 0;
     }
 }
